* honor theme settings (`prose-margin-inner` and `prose-text-indent-inner`) for inner paragraphs in abstract
* only indent text that starts at left margin (i.e., when text align is left or justify) (#2298)
* prevent footnote label from wrapping (#2297)
* keep footnote label with preceding text if adjacent (#2297)

Compliance::

* remove support for deprecated `spread` role on table
* support text alignment roles on style paragraphs
* support text alignment roles on verse block

== 2.2.0 (2022-07-22) - @mojavelinux

Enhancements::

* allow page background image to be specified per layout using `+{page-layout}+` attribute reference in path (#1739)
* allow page margin for rotated page to be configured independently using `page-margin-rotated` theme key or `pdf-page-margin-rotated` document attribute (#1719)
* allow orphan detection to be enabled for all section titles and discrete headings by setting `heading-min-height-after` to `auto` in theme (#2268)
* set `docimagesdir` attribute when attribute substitutions are applied to value from theme (#2278)
* start page numbering and running content on empty verso page before first chapter of prepress book if `start-at` value is 0 (#2252)
* don't force page break after TOC with automatic placement in article if `title-page` attribute is set and value of `toc-break-after` theme key is `auto` (#1768)
* add `--theme` option to CLI as shorthand for `-a pdf-theme` (#2250)
* add `--sourcemap` option to CLI to enable `:sourcemap` option on processor (#2265)
* broaden support for relative font sizes in theme to more than just inline elements; document support for relative font sizes
* allow theme to control font properties of marker for ordered list using `olist-marker` category (#2279)
* allow theme to control font style of marker (per marker or all markers) for unordered list

Improvements::

* add internal `Document#attr_unspecified?` method to simplify check for an attribute which has not been set or unset

Bug Fixes::
