@@ -8,6 +8,7 @@ module Asciidoctor
         '&gt;' => '>',
         '&amp;' => '&',
       }
+      XMLSpecialCharsRx = /&(?:[lg]t|amp);/
       InverseXMLSpecialChars = XMLSpecialChars.invert
       InverseXMLSpecialCharsRx = /[#{InverseXMLSpecialChars.keys.join}]/
       (BuiltInNamedEntities = {
@@ -27,14 +28,18 @@ module Asciidoctor
       #
       # FIXME: move to a module so we can mix it in elsewhere
       # FIXME: add option to control escaping entities, or a filter mechanism in general
-      def sanitize string
+      def sanitize string, compact: true
         string = string.gsub SanitizeXMLRx, '' if string.include? '<'
         string = string.gsub(CharRefRx) { $1 ? BuiltInNamedEntities[$1] : ([$2 ? $2.to_i : ($3.to_i 16)].pack 'U1') } if string.include? '&'
-        string.strip.tr_s ' ', ' '
+        compact ? (string.strip.tr_s ' ', ' ') : string
       end
 
       def escape_xml string
         string.gsub InverseXMLSpecialCharsRx, InverseXMLSpecialChars
+      end
+
+      def unescape_xml string
+        string.gsub XMLSpecialCharsRx, XMLSpecialChars
       end
 
       def escape_amp string
